# Sculk-Hosting

./: .gitignore  README.md  pyproject.toml  sculk_setup.ipynb
sculk_hosting/: __init__.py  cli.py  playit_manager.py  server.py  tunnel.py
sculk_hosting/static/: app.js  index.html  styles.css
