[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sculk-hosting"
version = "0.1.0"
description = "A premium, lightweight Minecraft server control panel for Google Colab."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "requests>=2.25.0",
    "psutil>=5.9.0",
    "python-multipart>=0.0.6"
]

[project.scripts]
sculk = "sculk_hosting.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sculk_hosting*"]

[tool.setuptools.package-data]
sculk_hosting = ["static/*"]
